syntax = "proto3";

package videoService;

service VideoService {
  rpc callMediaInfo (MediaReq) returns (MediaInfoRes);
  rpc callVideoChunk (VideoReq) returns (stream MediaRes);
  rpc callMediaSimple (MediaReq) returns (stream MediaRes);
  rpc sendMedia (stream MediaSendReq) returns (MediaSendRes);
  rpc isFileExist (ExistReq) returns (ExistRes);
  rpc deleteFile (DeleteFileReq) returns (Empty);
}

message MediaReq {
  string pathToMedia = 1;
}

message MediaInfoRes {
  int32 fileSize = 1;
  string ext = 2;
  string mime = 3;
}

message VideoReq {
  string pathToMedia = 1;
  int32 start = 2;
  int32 end = 3;
}

message MediaRes {
  bytes mediaStream = 1;
  bool isError = 2;
}

message MediaSendReq {
  oneof request {
    string fileName = 1;
    bytes chunk = 2;
  }
}

enum Status {
  SUCCESS = 0;
  FAILED = 1;
}

message MediaSendRes {
  Status status = 1;
}

message Empty {}

message ExistReq {
  string fileName = 1;
}

message ExistRes {
  bool fileExist = 1;
}

message DeleteFileReq {
  string fileName = 1;
}
